first websockets attempt

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/zwrose/hueset/issues"
   },
-  "homepage": "https://github.com/zwrose/hueset#readme"
+  "homepage": "https://github.com/zwrose/hueset#readme",
+  "dependencies": {
+    "websocket": "^1.0.23"
+  }
 }
