--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/zwrose/hueset#readme",
   "dependencies": {
-    "websocket": "^1.0.23"
+    "websocket": "^1.0.23",
+    "xml2js": "^0.4.16"
   }
 }
